--- a/app/templates/app/home_page.html
+++ b/app/templates/app/home_page.html
@@ -79,15 +79,14 @@
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
+      <!--<ol class="carousel-indicators">-->
+        <!--<li data-target="#myCarousel" data-slide-to="0" class="active"></li>-->
+        <!--<li data-target="#myCarousel" data-slide-to="1"></li>-->
+        <!--<li data-target="#myCarousel" data-slide-to="2"></li>-->
+      <!--</ol>-->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="{%static 'app/images/cv-review-image.jpg'%}" alt="main img=" style="position:static; height: 450px; width: 100%; top:0;left 0
-              '>
+          <img class="first-slide" src="{%static 'app/images/cv-review-image.jpg'%}" alt="main img=" style="position:static; height: 450px; width: 100%; top:0;left 0'>
           <div class="container">
             <div class="carousel-caption">
               <h1 style="color:#ff0000;font-family: Comic Sans MS ">make it worthwhile</h1>
